tests/contract_testcases/substrate/variables/global_constants_03.sol
uint constant x;
// ---- Expect: diagnostics ----
// error: 1:1-16: missing initializer for constant
